devlake-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devlake-ui
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: internal.devlake.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devlake-ui
                port:
                  number: 4000
